--- a/config_template.ini
+++ b/config_template.ini
@@ -8,10 +8,17 @@ Keywords = keyword
 
 ; 推送通道设置
 [Sendkey]
-push_plus_sendkey = d7f46sdagdfa
+my_push_url = https://your.push.com/?sendkey=
+push_plus_sendkey = 
 ; push_plus_sendkey获取方法见官网
 ; http://www.pushplus.plus/
-my_push_url = https://your.push.com/?sendkey=
+QYWX_CORPID = 
+QYWX_CORPSECRET = 
+QYWX_agentid = 
+; 企业微信配置，请参考官方文档
+; https://developer.work.weixin.qq.com/document/path/90487
+; https://developer.work.weixin.qq.com/document/path/90236#10167
+
 
 ; 以下设置如果不明白含义就先别改了
 ; 北理工邮箱IMAP服务地址
